# CPPLab1

./: CMakeLists.txt  Dockerfile  README.md
include/sequence_lib/: ArraySequence.h  List.h  ListSequence.h  Sequence.h
include/sorter_lib/: CocktailSorter.h  ISorter.h  QuickSorter.h
src/: main.cpp
tests/: sequence_tests.cpp  sorter_tests.cpp
